Add pic, use weird grid layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Gianluca Ciccarelli</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Gianluca Ciccarelli</h1>
-    <h2>Software Engineer</h2>
-    <p>
-    <a href="https://github.com/sturmer">GitHub</a> | <a href="https://twitter.com/increatore">Twitter</a>
-    </p>
+    <div class="wrapper">
+      <div></div>
+      <div>
+        <img src="me.jpeg" alt="Me" width="300px" />
+        <h1>Gianluca Ciccarelli</h1>
+        <h2>Software Engineer</h2>
+        <p>
+          <a href="https://www.gergel.im">Gergel.im</a> ♦︎
+          <a href="https://github.com/sturmer">GitHub</a> ♦︎
+          <a href="https://twitter.com/increatore">Twitter</a> ♦︎
+          <a href="https://www.linkedin.com/in/gciccarelli">LinkedIn</a>
+        </p>
+      </div>
+      <div></div>
+    </div>
   </body>
 </html>
-
-
