With round pic and some debatable palette choice

--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
     <div class="wrapper">
       <div></div>
       <div>
-        <img src="me.jpeg" alt="Me" width="300px" />
+        <img src="me.png" alt="Me" width="300px" />
         <h1>Gianluca Ciccarelli</h1>
         <h2>Software Engineer</h2>
-        <p>
-          <a href="https://www.gergel.im">Gergel.im</a> ♦︎
-          <a href="https://github.com/sturmer">GitHub</a> ♦︎
-          <a href="https://twitter.com/increatore">Twitter</a> ♦︎
-          <a href="https://www.linkedin.com/in/gciccarelli">LinkedIn</a>
-        </p>
+        <p class="pun">...clearly not a front-end specialist.</p>
       </div>
-      <div></div>
+      <div class="from-top">
+        <a class="rotate" href="https://www.gergel.im">Gergel.im</a>
+        <span class="rotate">⚛︎</span>
+        <a class="rotate" href="https://www.goodreads.com/sturmer">Goodreads</a>
+        <span class="rotate">⚛︎</span>
+        <a class="rotate" href="https://github.com/sturmer">GitHub</a
+        ><span class="rotate">⚛︎</span>
+        <a class="rotate" href="https://twitter.com/increatore">Twitter</a
+        ><span class="rotate">⚛︎</span>
+        <a class="rotate" href="https://www.linkedin.com/in/gciccarelli"
+          >LinkedIn</a
+        >
+      </div>
     </div>
   </body>
 </html>
