The perfectionist's change

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="wrapper">
       <div></div>
+      <div></div>
       <div class="bordered">
         <img src="me.png" alt="Me" width="300px" />
         <h1>Gianluca Ciccarelli</h1>
@@ -21,6 +22,7 @@
           <a href="https://www.linkedin.com/in/gciccarelli">LinkedIn</a>
         </p>
       </div>
+      <div></div>
       <div></div>
     </div>
   </body>
